# journal_digital_corpus

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING  README.md  empty.tsv  name_seconds.tsv  name_year.tsv  pyproject.toml
.github/workflows/: hatch-publish-to-pypi.yml  lint.yml  test.yml  update-measurements.yml
corpus/: measurements.tsv  measurements_description.tsv  measurements_sum.tsv
corpus/intertitle/: measurements.tsv  measurements_description.tsv  measurements_sum.tsv
corpus/kino/1930/: Kino143E.1.mpg.srt  Kino216.1.mpg.srt
corpus/kino/1932/: Kino238.1.mpg.srt
corpus/kino/1936/: Kino298E.1.mpg.srt
corpus/kino/1946/: Kino227A.1.mpg.srt
corpus/kino/1947/: Kino215.1.mpg.srt
corpus/nuet/1954/: Nuet44A.1.mpg.srt  Nuet44C.1.mpg.srt
corpus/nuet/1955/: Nuet49C.1.mpg.srt
corpus/nuet/1956/: Nuet102B.1.mpg.srt
corpus/sf/1941/: SF2912.1.mpg.srt
corpus/speech/: measurements.tsv  measurements_description.tsv  measurements_sum.tsv
corpus/speech/sf/1939/: SF1010B.1.mpg.srt
corpus/speech/sf/1943/: SF1187.1.mpg.srt
src/: blank_transcripts.py  corpus.py  name_to_path.py  settings.py  transcribe.py
src/journal_digital/: NameSeconds.py  SubtitleSegment.py  corpus.py  measure.py  settings.py
src/journal_digital_corpus/: NameSeconds.py  __init__.py  blank_transcripts.py  corpus.py  measure.py  name_to_path.py  settings.py  srt_to_txt.py  transcribe.py  word_count.py
tests/: corpus_count_test.py  corpus_test.py  measure_test.py  name_to_path_test.py  subcorpus_test.py
