[project]
dependencies =[
  "dotenv==0.9.9",
  "python-dotenv==1.0.1"
]
name = "journal_digital_corpus"
version = "0.0.1"
readme = "README.md"

[project.urls]
Homepage = "https://modernatider1936.se"
Repository = "https://github.com/Modern36/journal_digital_corpus"

[project.optional-dependencies]
dev = [
  "swescribe==0.0.1",
  "pytest",
  "tqdm==4.67.1"
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
force-exclude = '''
/(
    \.toml
  | \.yaml
)/
'''

readme = "README.md"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = ["tests"]
pythonpath = "src"
